remove editor animation

--- a/src/scss/7-animation.scss
+++ b/src/scss/7-animation.scss
@@ -4,6 +4,7 @@
     opacity: 0;
     transform: scaleY(0);
   }
+
   to {
     opacity: 1;
     transform: scaleY(1);
@@ -15,6 +16,7 @@
     opacity: 1;
     transform: scaleY(1);
   }
+
   to {
     opacity: 0;
     transform: scaleY(0);
@@ -25,6 +27,7 @@
   from {
     transform: translateX(0%);
   }
+
   to {
     transform: translateX(-100%);
   }
@@ -34,6 +37,7 @@
   from {
     transform: translateX(-100%);
   }
+
   to {
     transform: translateX(0%);
   }
@@ -45,6 +49,7 @@
     opacity: 0;
     transform: translateX(-50%) scale(0);
   }
+
   to {
     z-index: 1;
     opacity: 1;
@@ -53,30 +58,32 @@
 }
 
 /* --------------------------- General transitions -------------------------- */
-.split-view-container {
-  & .split-view-view,
-  .split-view-view [class*='minimap']:not([class*='minimap-slider']),
-  .split-view-view [class*='minimap'] > canvas,
-  .split-view-view [id='workbench.parts.editor'] .monaco-scrollable-element {
-    transition-property: $general-trans-props;
-    transition-duration: $general-trans-duration-medium;
-  }
-}
+// .split-view-container {
 
-[id='workbench.parts.editor'] {
-  .content[style*='width'],
-  .overflow-guard[style*='width'],
-  .overlayWidgets[style*='width'],
-  .view-overlays[style*='width'] {
-    transition-property: $general-trans-props;
-    transition-duration: $general-trans-duration-medium;
-  }
+//   & .split-view-view,
+//   .split-view-view [class*='minimap']:not([class*='minimap-slider']),
+//   .split-view-view [class*='minimap']>canvas,
+//   .split-view-view [id='workbench.parts.editor'] .monaco-scrollable-element {
+//     transition-property: $general-trans-props;
+//     transition-duration: $general-trans-duration-medium;
+//   }
+// }
 
-  .view-line {
-    transition-property: $general-trans-props;
-    transition-duration: $general-trans-duration-extra-short;
-  }
-}
+// [id='workbench.parts.editor'] {
+
+//   .content[style*='width'],
+//   .overflow-guard[style*='width'],
+//   .overlayWidgets[style*='width'],
+//   .view-overlays[style*='width'] {
+//     transition-property: $general-trans-props;
+//     transition-duration: $general-trans-duration-medium;
+//   }
+
+//   .view-line {
+//     transition-property: $general-trans-props;
+//     transition-duration: $general-trans-duration-extra-short;
+//   }
+// }
 
 .monaco-workbench {
   background-color: var(--vscode-editor-background);
@@ -112,23 +119,23 @@
 
 /* ---------------------------------- Tabs ---------------------------------- */
 .tabs-container {
-  > .tab.moveLeft {
+  >.tab.moveLeft {
     transform-origin: left;
     z-index: 2;
   }
 
-  > .tab.moveRight {
+  >.tab.moveRight {
     transform-origin: left;
     animation: tabMoveRight $tabs-duration;
     z-index: 2;
   }
 
-  > .tab {
+  >.tab {
     transform-origin: left;
     animation: openTab $tabs-duration;
   }
 
-  > .tab {
+  >.tab {
     z-index: 2;
   }
 }
@@ -139,9 +146,7 @@
   scale: 0.98;
 }
 
-.monaco-list-row:not(
-    .explorer-folders-view .monaco-list-row,
-    .code-cell-row
-  ).focused {
+.monaco-list-row:not(.explorer-folders-view .monaco-list-row,
+  .code-cell-row).focused {
   scale: 1;
 }
