--- a/src/scss/3-titlebar.scss
+++ b/src/scss/3-titlebar.scss
@@ -1,11 +1,7 @@
-.monaco-workbench
-  .part.titlebar
-  > .titlebar-container
-  > .titlebar-center
-  > .window-title {
+.monaco-workbench .part.titlebar>.titlebar-container>.titlebar-center>.window-title {
   font-size: $titlebar-search-box-font-size;
 
-  > .command-center .action-item.command-center-center {
+  >.command-center .action-item.command-center-center {
     width: fit-content;
     min-width: $titlebar-search-box-min-width;
     padding: $titlebar-search-box-padding;
