--- a/src/scss/6-editor.scss
+++ b/src/scss/6-editor.scss
@@ -79,9 +79,10 @@
 }
 
 /* ------------------------ Git blame inline message ------------------------ */
-.monaco-editor span[class*='ced-1-TextEditorDecorationType']:not(#\9):not(#\9):not(#\9)::after {
-  color: #99999959;
-}
+// .monaco-editor span[class*='ced-1-TextEditorDecorationType']:not(#\9):not(#\9):not(#\9)::after {
+//   color: #99999959;
+// }
+
 
 /* ----------------------- Hide editor action buttons ----------------------- */
 /* .title.title.tabs > .tabs-and-actions-container .editor-actions {
