--- a/src/scss/8-panel.scss
+++ b/src/scss/8-panel.scss
@@ -25,11 +25,12 @@
 }
 
 /* -------------------- Increase panel titles font-weight ------------------- */
-.monaco-workbench .part>.title>.title-label h2 {
+.title>.title-label h2 {
   font-weight: 600;
 }
 
-// Fix inconsistent font-family due to vscode inline styles .view-lines.monaco-mouse-cursor-text,
+// Fix inconsistent font-family due to vscode inline styles
+.view-lines.monaco-mouse-cursor-text,
 .scm-editor-placeholder {
   font-family: var(--custom-font-family);
 }
