- add lint and formatter - add breadcrumb style (WIP)

--- a/src/scss/1-variables.scss
+++ b/src/scss/1-variables.scss
@@ -111,3 +111,6 @@ $vim-visual-line-mode-replacement: 'VISUAL LINE';
 $vim-visual-block-mode-replacement: 'VISUAL BLOCK';
 
 $status-bar-item-info-padding: 2px 3px 2px;
+
+$breadcrumb-item-gap: 5px;
+$breadcrumb-height: 30px;
