--- a/src/scss/6-editor.scss
+++ b/src/scss/6-editor.scss
@@ -5,12 +5,12 @@
     margin-bottom: $internal-gutter;
   }
 
-  >.tabs-and-actions-container>.monaco-scrollable-element div.tabs-container[role='tablist'] {
-    &+[role='presentation']>.slider:not(#\9) {
+  > .tabs-and-actions-container > .monaco-scrollable-element div.tabs-container[role='tablist'] {
+    & + [role='presentation'] > .slider:not(#\9) {
       height: 3px;
     }
 
-    >.tab[role='tab'] {
+    > .tab[role='tab'] {
       margin-right: $tab-gutter;
       border-right: none;
       border-radius: $border-radius-md;
@@ -20,13 +20,19 @@
 
 /* ------------------ Active and hover background for tabs ------------------ */
 .title.tabs {
-  >.tabs-and-actions-container>.monaco-scrollable-element div.tabs-container[role='tablist']>.tab.active[role='tab']:not(#\9):not(#\9) {
+  > .tabs-and-actions-container
+    > .monaco-scrollable-element
+    div.tabs-container[role='tablist']
+    > .tab.active[role='tab']:not(#\9):not(#\9) {
     background-color: $active-tab-editor-background;
   }
 }
 
 .title.tabs {
-  >.tabs-and-actions-container>.monaco-scrollable-element div.tabs-container[role='tablist']>.tab[role='tab']:not(#\9):not(#\9):hover {
+  > .tabs-and-actions-container
+    > .monaco-scrollable-element
+    div.tabs-container[role='tablist']
+    > .tab[role='tab']:not(#\9):not(#\9):hover {
     background-color: $hovered-tab-editor-background;
   }
 }
@@ -60,11 +66,11 @@
 }
 
 /* -------------------------------- Watermark ------------------------------- */
-.monaco-workbench .part.editor>.content .editor-group-container>.editor-group-watermark {
+.monaco-workbench .part.editor > .content .editor-group-container > .editor-group-watermark {
   max-width: $watermark-width;
 }
 
-.monaco-workbench .part.editor>.content .editor-group-container>.editor-group-watermark>.letterpress {
+.monaco-workbench .part.editor > .content .editor-group-container > .editor-group-watermark > .letterpress {
   height: $watermark-height;
   opacity: 0.8;
   background-position: center;
@@ -73,16 +79,28 @@
     url($macos-one-drive-path + $watermark-light-path);
 }
 
-.monaco-workbench.vs-dark .part.editor>.content .editor-group-container>.editor-group-watermark>.letterpress {
+.monaco-workbench.vs-dark .part.editor > .content .editor-group-container > .editor-group-watermark > .letterpress {
   background-image: url($windows-one-drive-path + $watermark-light-path),
     url($macos-one-drive-path + $watermark-light-path);
+}
+
+/* ------------------------------- Breadcrumb ------------------------------- */
+.breadcrumbs-below-tabs {
+  height: $breadcrumb-height;
+}
+
+.monaco-breadcrumbs {
+  gap: $breadcrumb-item-gap;
+}
+
+.monaco-breadcrumbs .monaco-breadcrumb-item .codicon-breadcrumb-separator {
+  margin-left: $breadcrumb-item-gap;
 }
 
 /* ------------------------ Git blame inline message ------------------------ */
 // .monaco-editor span[class*='ced-1-TextEditorDecorationType']:not(#\9):not(#\9):not(#\9)::after {
 //   color: #99999959;
 // }
-
 
 /* ----------------------- Hide editor action buttons ----------------------- */
 /* .title.title.tabs > .tabs-and-actions-container .editor-actions {
