- update settings - update keybindings - update breadcrumb styles - fix clock margin

--- a/src/scss/4-statusbar.scss
+++ b/src/scss/4-statusbar.scss
@@ -25,7 +25,7 @@
   order: 2;
 }
 
-[id='angelo-breuer.clock'] {
+[id='angelo-breuer.clock']:not(#\9) {
   // [id='Compulim.vscode-clock']:not(#\9):not(#\9):not(#\9) {
   padding-left: 5px;
   order: 1;
