--- a/src/scss/6-editor.scss
+++ b/src/scss/6-editor.scss
@@ -87,6 +87,11 @@
 /* ------------------------------- Breadcrumb ------------------------------- */
 .breadcrumbs-below-tabs {
   height: $breadcrumb-height;
+  & .breadcrumbs-control,
+  & .monaco-scrollable-element,
+  & .monaco-breadcrumbs {
+    height: 100%;
+  }
 }
 
 .monaco-breadcrumbs {
