--- a/src/scss/7-animation.scss
+++ b/src/scss/7-animation.scss
@@ -23,39 +23,39 @@
   }
 }
 
-@keyframes tabMoveLeft {
-  from {
-    transform: translateX(0%);
-  }
+// @keyframes tabMoveLeft {
+//   from {
+//     transform: translateX(0%);
+//   }
 
-  to {
-    transform: translateX(-100%);
-  }
-}
+//   to {
+//     transform: translateX(-100%);
+//   }
+// }
 
-@keyframes tabMoveRight {
-  from {
-    transform: translateX(-100%);
-  }
+// @keyframes tabMoveRight {
+//   from {
+//     transform: translateX(-100%);
+//   }
 
-  to {
-    transform: translateX(0%);
-  }
-}
+//   to {
+//     transform: translateX(0%);
+//   }
+// }
 
-@keyframes openTab {
-  from {
-    z-index: 1;
-    opacity: 0;
-    transform: translateX(-50%) scale(0);
-  }
+// @keyframes openTab {
+//   from {
+//     z-index: 1;
+//     opacity: 0;
+//     transform: translateX(-50%) scale(0);
+//   }
 
-  to {
-    z-index: 1;
-    opacity: 1;
-    transform: translateX(0) scale(1);
-  }
-}
+//   to {
+//     z-index: 1;
+//     opacity: 1;
+//     transform: translateX(0) scale(1);
+//   }
+// }
 
 /* --------------------------- General transitions -------------------------- */
 // .split-view-container {
@@ -118,27 +118,27 @@
 }
 
 /* ---------------------------------- Tabs ---------------------------------- */
-.tabs-container {
-  > .tab.moveLeft {
-    transform-origin: left;
-    z-index: 2;
-  }
+// .tabs-container {
+//   > .tab.moveLeft {
+//     transform-origin: left;
+//     z-index: 2;
+//   }
 
-  > .tab.moveRight {
-    transform-origin: left;
-    animation: tabMoveRight $tabs-duration;
-    z-index: 2;
-  }
+//   > .tab.moveRight {
+//     transform-origin: left;
+//     animation: tabMoveRight $tabs-duration;
+//     z-index: 2;
+//   }
 
-  > .tab {
-    transform-origin: left;
-    animation: openTab $tabs-duration;
-  }
+//   > .tab {
+//     transform-origin: left;
+//     animation: openTab $tabs-duration;
+//   }
 
-  > .tab {
-    z-index: 2;
-  }
-}
+//   > .tab {
+//     z-index: 2;
+//   }
+// }
 
 // /* ----------------------------- Rows ----------------------------- */
 // .monaco-list-row:not(.explorer-folders-view .monaco-list-row, .code-cell-row) {
