feat: simplify and refactor custom css

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,57 @@
-@import './scss/1-variables.scss';
-@import './scss/2-global.scss';
-@import './scss/3-titlebar.scss';
-@import './scss/4-statusbar.scss';
-@import './scss/5-icon-buttons.scss';
-@import './scss/6-editor.scss';
-@import './scss/7-animation.scss';
-@import './scss/8-panel.scss';
+// @import './scss/1-variables.scss';
+// @import './scss/2-global.scss';
+// @import './scss/3-titlebar.scss';
+// @import './scss/4-statusbar.scss';
+// @import './scss/5-icon-buttons.scss';
+// @import './scss/6-editor.scss';
+// @import './scss/7-animation.scss';
+// @import './scss/8-panel.scss';
+
+
+* {
+    box-shadow: none !important;
+  }
+  
+  .windows,
+  .editorPlaceholder,
+  .monaco-mouse-cursor-text,
+  .shadow-root-host {
+    font-family: 'Maple Mono NF' !important;
+  }
+  
+  .monaco-workbench .part.statusbar,
+  .monaco-workbench
+    .part.editor
+    > .content
+    .editor-group-container
+    > .title.breadcrumbs
+    .breadcrumbs-control
+    .monaco-icon-label
+    .label-name {
+    font-size: 13px !important;
+  }
+  
+  [id='alefragnani.project-manager.projectManager.statusBar'] {
+    order: 1;
+  }
+  
+  [id='status.scm.0'] {
+    order: 2;
+  }
+  
+  [id='status.scm.1'] {
+    order: 3;
+  }
+  
+  [id='status.problems'] {
+    order: 4;
+  }
+  
+  [id='vscodevim.vim.primary'] {
+    order: 5;
+  }
+  
+  [id='be5invis.vscode-custom-css'] {
+    display: none !important;
+  }
+  
